Bug fixes and FixedThreadPool instead of virtual threads